# phaser-mcp-server

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SKIP_LOGIC_IMPLEMENTATION.md  docker-compose.yml  docker-healthcheck.sh  pyproject.toml  test_error_handling_demo.py  test_mcp_search.py  test_mock_response.py  test_real_urls.py  test_search_comprehensive.py  test_search_demo.py  type_analysis_report.md  uv-requirements.txt
.amazonq/: mcp.json
.amazonq/agents/: default.json
.github/workflows/: test-coverage.yml
.kiro/settings/: mcp.json
.kiro/specs/beautifulsoup-type-fixes/: design.md  requirements.md  tasks.md
.kiro/specs/performance-test-fixes/: design.md  requirements.md  tasks.md
.kiro/specs/phaser-mcp-server/: design.md  requirements.md  tasks.md
.kiro/specs/test-coverage-improvement/: design.md  requirements.md  tasks.md
.kiro/steering/: deployment-workflow.md  product.md  structure.md  tech.md  testing-standards.md
docs/: api.md  captcha-bypass.md  coverage.md  docker.md  installation.md  usage.md
phaser_mcp_server/: __init__.py  client.py  models.py  parser.py  server.py  utils.py
phaser_mcp_server/stubs/: __init__.py  bs4.pyi  markdownify.pyi
scripts/: check_coverage.py  format.sh
tests/: __init__.py  integration_test_summary.md  test_client.py  test_documentation_performance.py  test_end_to_end.py  test_integration.py  test_mcp_integration.py  test_memory_usage.py  test_models.py  test_models_validation.py  test_pagination_performance.py  test_parser.py  test_performance_fixtures.py  test_server.py  test_utils.py  utils.py
tests/fixtures/: sample_api_reference.html  sample_phaser_tutorial.html
